# autogam-python

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: example.ipynb
src/autogam/: autogam.py
tests/: test_autogam.py
