[tool.poetry]
name = "autogam"
version = "0.1.0"
description = "Automate the Creation of Generalized Additive Models (GAMs)"
authors = ["Chitu Okoli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
